--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -20,7 +20,7 @@
             ]  
             },
           {
-            "url": "https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz",
+            "url": "https://github.com/mvaisakh/gcc-build/releases/download/31032024/eva-gcc-arm64-31032024.xz",
             "name": "gcc-arm64",
             "binaryEnv": [
                 "bin"
@@ -39,7 +39,7 @@
             "LTO": "thin",
             "CC_COMPAT": "",
             "externalCommands": { 
-              "CROSS_COMPILE": "gcc-arm64/bin/aarch64-linux-gnu-",
+              "CROSS_COMPILE": "gcc-arm64/gcc-arm64/bin/aarch64-linux-gnu-",
               "AS": "clang/bin/llvm-as",
               "AR": "clang/bin/llvm-ar",
               "NM": "clang/bin/llvm-nm",
@@ -49,8 +49,8 @@
               "LD": "clang/bin/ld.lld",
               "READELF": "clang/bin/llvm-readelf",
               "OBJSIZE": "clang/bin/llvm-size",
-              "HOSTCC": "gcc-arm64/bin/gcc",
-              "HOSTCXX": "gcc-arm64/bin/g++",
+              "HOSTCC": "gcc-arm64/gcc-arm64/bin/gcc",
+              "HOSTCXX": "gcc-arm64/gcc-arm64/bin/g++",
               "HOSTAR": "clang/bin/llvm-ar",
               "HOSTLD": "clang/bin/ld.lld"
             } 
