--- a/configs/gs201.radioactive-zyc-clang19.config.json
+++ b/configs/gs201.radioactive-zyc-clang19.config.json
@@ -12,7 +12,7 @@
           }, 
           "toolchains": [ 
             {  
-               "url": "https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz",  
+               "url": "https://github.com/ZyCromerZ/Clang/releases/download/19.0.0git-20240723-release/Clang-19.0.0git-20240723.tar.gz",  
                "name": "clang",  
                "binaryEnv": [
                 "bin"
@@ -22,7 +22,7 @@
             "url": "https://github.com/mvaisakh/gcc-build/releases/download/31032024/eva-gcc-arm64-31032024.xz",
             "name": "gcc-arm64",
             "binaryEnv": [
-                "bin"
+                "gcc-arm64/bin"
             ]
           }
           ], 
