--- a/configs/gs201.radioactive-weebxclang-19.config.json
+++ b/configs/gs201.radioactive-weebxclang-19.config.json
@@ -12,17 +12,17 @@
           }, 
           "toolchains": [ 
             {  
-               "url": "https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz",  
-               "name": "gcc-arm64",  
+               "url": "https://github.com/XSans0/WeebX-Clang/releases/download/WeebX-Clang-19.1.5-release/WeebX-Clang-19.1.5.tar.gz",  
+               "name": "clang",  
                "binaryEnv": [
                 "bin"
             ]  
             }, 
           {
             "url": "https://github.com/mvaisakh/gcc-build/releases/download/31032024/eva-gcc-arm64-31032024.xz",
-            "name": "gcc64",
+            "name": "gcc-arm64",
             "binaryEnv": [
-                "bin"
+                "gcc-arm64/bin"
             ]
           }
           ], 
@@ -38,7 +38,7 @@
             "LTO": "thin",
             "CC_COMPAT": "",
             "externalCommands": { 
-              "CROSS_COMPILE": "gcc-arm64/gcc-arm64/bin/aarch64-linux-gnu-",
+              "CROSS_COMPILE": "gcc-arm64/gcc-arm64/gcc-arm64/bin/aarch64-linux-gnu-",
               "AS": "clang/bin/llvm-as",
               "AR": "clang/bin/llvm-ar",
               "NM": "clang/bin/llvm-nm",
@@ -48,8 +48,8 @@
               "LD": "clang/bin/ld.lld",
               "READELF": "clang/bin/llvm-readelf",
               "OBJSIZE": "clang/bin/llvm-size",
-              "HOSTCC": "gcc-arm64/gcc-arm64/bin/gcc",
-              "HOSTCXX": "gcc-arm64/gcc-arm64/bin/g++",
+              "HOSTCC": "gcc-arm64/gcc-arm64/gcc-arm64/bin/gcc",
+              "HOSTCXX": "gcc-arm64/gcc-arm64/gcc-arm64/bin/g++",
               "HOSTAR": "clang/bin/llvm-ar",
               "HOSTLD": "clang/bin/ld.lld"
             } 
