--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -20,10 +20,11 @@
             ]  
             },
           {
-            "url": "https://github.com/mvaisakh/gcc-build/releases/download/31032024/eva-gcc-arm64-31032024.xz",
-            "name": "gcc-arm64",
+            "repo": "https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git",
+            "branch": "lineage-19.1",
+            "name": "gcc",
             "binaryEnv": [
-                "gcc-arm64/bin"
+                "bin"
             ]
           }
           ], 
@@ -39,7 +40,7 @@
             "LTO": "thin",
             "CC_COMPAT": "",
             "externalCommands": { 
-              "CROSS_COMPILE": "clang/bin/aarch64-linux-gnu-",
+              "CROSS_COMPILE": "gcc/bin/aarch64-linux-android-gnu-",
               "AS": "clang/bin/llvm-as",
               "AR": "clang/bin/llvm-ar",
               "NM": "clang/bin/llvm-nm",
@@ -49,10 +50,10 @@
               "LD": "clang/bin/ld.lld",
               "READELF": "clang/bin/llvm-readelf",
               "OBJSIZE": "clang/bin/llvm-size",
-              "HOSTCC": "gcc-arm64/gcc-arm64/gcc-arm64/bin/aarch64-elf-gcc",
-              "HOSTCXX": "gcc-arm64/gcc-arm64/gcc-arm64/bin/aarch64-elf-g++",
-              "HOSTAR": "clang/bin/llvm-ar",
-              "HOSTLD": "clang/bin/ld.lld"
+              "HOSTCC": "gcc/bin/aarch64-linux-android-gcc",
+              "HOSTCXX": "gcc/bin/aarch64-linux-android-g++",
+              "HOSTAR": "gcc/bin/aarch64-linux-android-ar",
+              "HOSTLD": "gcc/bin/aarch64-linux-android-ld"
             } 
           }, 
           "AnyKernel3": { 
