--- a/configs/gs201.radioactive-weebxclang-19.config.json
+++ b/configs/gs201.radioactive-weebxclang-19.config.json
@@ -18,28 +18,29 @@
                 "bin"
             ]  
             }, 
-          {
-            "repo": "https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git",
-            "branch": "lineage-19.1",
-            "name": "gcc",
-            "binaryEnv": [
+            {  
+               "url": "https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz",  
+               "name": "gcc",  
+               "binaryEnv": [
                 "bin"
-            ]
-          }
+            ]  
+            }
           ], 
           "enableCcache": false, 
           "params": { 
             "ARCH": "arm64", 
-            "SUBARCH": "arm64",
-            "CC": "clang/bin/clang",
-            "CXX": "clang/bin/clang++",
             "CLANG_TRIPLE": "aarch64-linux-gnu-",
             "LLVM": "1",
             "LLVM_IAS": "1",
             "LTO": "thin",
-            "CC_COMPAT": "",
+            "LTO_CLANG": "1",
+            "KBUILD_LTO": "thin",
             "externalCommands": { 
-              "CROSS_COMPILE": "gcc/bin/aarch64-linux-android-gnu-",
+              "CC": "clang/bin/clang",
+              "CROSS_COMPILE": "gcc/bin/aarch64-linux-android-",
+              "HOSTCC": "clang/bin/clang",
+              "HOSTCXX": "clang/bin/clang++",
+              "HOSTAR": "clang/bin/llvm-ar",
               "AS": "clang/bin/llvm-as",
               "AR": "clang/bin/llvm-ar",
               "NM": "clang/bin/llvm-nm",
@@ -47,12 +48,9 @@
               "OBJDUMP": "clang/bin/llvm-objdump",
               "STRIP": "clang/bin/llvm-strip",
               "LD": "clang/bin/ld.lld",
+              "LD_LIBRARY_PATH": "clang/lib",
               "READELF": "clang/bin/llvm-readelf",
               "OBJSIZE": "clang/bin/llvm-size",
-              "HOSTCC": "gcc/bin/aarch64-linux-android-gcc",
-              "HOSTCXX": "gcc/bin/aarch64-linux-android-g++",
-              "HOSTAR": "gcc/bin/aarch64-linux-android-ar",
-              "HOSTLD": "gcc/bin/aarch64-linux-android-ld"
             } 
           }, 
           "AnyKernel3": { 
