--- a/configs/gs201.radioactive-aospclang.config.json
+++ b/configs/gs201.radioactive-aospclang.config.json
@@ -24,8 +24,8 @@
                "name": "gcc",  
                "binaryEnv": [
                 "bin"
-            ]  
-            }
+            ]
+           }
           ], 
           "enableCcache": false, 
           "params": { 
@@ -51,7 +51,7 @@
               "LD": "clang/bin/ld.lld",
               "LD_LIBRARY_PATH": "clang/lib",
               "READELF": "clang/bin/llvm-readelf",
-              "OBJSIZE": "clang/bin/llvm-size",
+              "OBJSIZE": "clang/bin/llvm-size"
             } 
           }, 
           "AnyKernel3": { 
