--- a/configs/gs201.radioactive-weebxclang-19.config.json
+++ b/configs/gs201.radioactive-weebxclang-19.config.json
@@ -28,18 +28,19 @@
           ], 
           "enableCcache": false, 
           "params": { 
-            "ARCH": "arm64", 
+            "ARCH": "arm64",
+            "CC": "clang/bin/clang",
+            "CXX": "clang/bin/clang++",
             "CLANG_TRIPLE": "aarch64-linux-gnu-",
             "LLVM": "1",
             "LLVM_IAS": "1",
-            "LTO": "thin",
-            "LTO_CLANG": "1",
-            "KBUILD_LTO": "thin",
+            "LTO": "full",
             "externalCommands": { 
               "CC": "clang/bin/clang",
               "CROSS_COMPILE": "gcc/bin/aarch64-linux-android-",
               "HOSTCC": "clang/bin/clang",
               "HOSTCXX": "clang/bin/clang++",
+              "HOSTLD": "clang/bin/ld.lld",
               "HOSTAR": "clang/bin/llvm-ar",
               "AS": "clang/bin/llvm-as",
               "AR": "clang/bin/llvm-ar",
@@ -48,7 +49,6 @@
               "OBJDUMP": "clang/bin/llvm-objdump",
               "STRIP": "clang/bin/llvm-strip",
               "LD": "clang/bin/ld.lld",
-              "LD_LIBRARY_PATH": "clang/lib",
               "READELF": "clang/bin/llvm-readelf",
               "OBJSIZE": "clang/bin/llvm-size"
             } 
