Add support for .tar.zst files and new configuration files for ZyC and Neutron toolchains

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -170,6 +170,9 @@ jobs:
                 *.tar.gz)
                   tar zxvf "$filename" -C $toolchain_name
                   ;;
+                *.tar.zst)
+                  tar xvf "$filename" -C $toolchain_name
+                  ;;
                 *.rar)
                   unrar x "$filename" $toolchain_name
                   ;;
