--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,6 +101,7 @@ jobs:
           sudo apt-get install -y build-essential bc libssl-dev libfl-dev  gcc-aarch64-linux-gnu 
           sudo apt-get install -y pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl 
           sudo apt-get install -y zip unzip tar gzip bzip2 rar unrar g++-multilib bison gperf zlib1g-dev automake
+          sudo apt-get install -y binutils openssl kmod cpio flex libelf-dev libtfm-dev ca-certificates xz-utils aria2 pigz
 
       # Initialize ccache
       - name: 🚄 Setup ccache
@@ -156,7 +157,7 @@ jobs:
               mkdir -p $toolchain_name
 
               # Download archive
-              wget "$toolchain_url"
+              aria2c "$toolchain_url"
 
               # Get filename
               filename="${toolchain_url##*/}"
