Refactor build.yml to consistently use aria2c for downloading toolchain archives and remove obsolete Neutron configuration files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,27 +157,32 @@ jobs:
               mkdir -p $toolchain_name
 
               # Download archive
-              aria2c "$toolchain_url"
 
               # Get filename
               filename="${toolchain_url##*/}"
               case "$filename" in
                 *.zip)
+                  aria2c -o "$filename" "$toolchain_url"
                   unzip -d $toolchain_name "$filename"
                   ;;
                 *.tar)
+                  aria2c -o "$filename" "$toolchain_url"
                   tar xvf "$filename" -C $toolchain_name
                   ;;
                 *.tar.gz)
+                  aria2c -o "$filename" "$toolchain_url"
                   tar zxvf "$filename" -C $toolchain_name
                   ;;
                 *.tar.zst)
+                  aria2c -o "$filename" "$toolchain_url"
                   tar xvf "$filename" -C $toolchain_name
                   ;;
                 *.rar)
+                  aria2c -o "$filename" "$toolchain_url"
                   unrar x "$filename" $toolchain_name
                   ;;
                 *.xz)
+                  aria2c -o "$filename" "$toolchain_url"
                   tar xvf "$filename" -C $toolchain_name
                   ;;
                 *)
