--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -392,8 +392,8 @@ jobs:
           echo "🤔 PATH Variable: $PATH"
           export KBUILD_BUILD_HOST=Github-Action
           export KBUILD_BUILD_USER=$(echo ${{ github.actor }} | tr A-Z a-z)
-          make ${{ env.ARGS }} ${{ env.KERNEL_DEFCONFIG_PATH }}
-          make ${{ env.ARGS }}
+          make -j$(nproc --all) ${{ env.ARGS }} ${{ env.KERNEL_DEFCONFIG_PATH }}
+          make -j$(nproc --all) ${{ env.ARGS }}
           cp /home/runner/work/Kernel-Builder-Next/Kernel-Builder-Next/out/arch/arm64/boot/dts/google/gs201-a0.dtb /home/runner/work/Kernel-Builder-Next/Kernel-Builder-Next/out/arch/arm64/boot/dts/google/dtb
           # tree ${{ env.OUT_DIR }}
       
