--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,15 +95,15 @@ jobs:
         run: |
           sudo apt-get update
 
-          sudo apt install -y \
+          sudo apt-get install --no-install-recommends -y \
             curl git ftp lftp wget libarchive-tools ccache python2 python2-dev python3 \
-            pngcrush schedtool dpkg-dev liblz4-tool make optipng maven device-tree-compiler \
+            pngcrush schedtool dpkg-dev liblz4-tool make optipng maven device-tree-compiler \ 
             libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc \
-            libxml2-utils libbz2-dev squashfs-tools lzop flex tree \
-            build-essential bc libssl-dev libfl-dev gcc-aarch64-linux-gnu \
+            libxml2-utils libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools lzop flex tree \
+            build-essential bc libssl-dev libfl-dev  gcc-aarch64-linux-gnu \
             pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl \
             zip unzip tar gzip bzip2 rar unrar g++-multilib bison gperf zlib1g-dev automake \
-            binutils openssl kmod cpio flex libelf-dev libtfm-dev ca-certificates xz-utils aria2 pigz
+            binutils openssl kmod cpio flex libelf-dev libtfm-dev ca-certificates xz-utils aria2 pigz \
  
           # Limpiar caché para liberar espacio
           echo "📌 Estado de memoria antes de Swap:"
