--- a/configs/gs201.radioactive-aospclang-r498229b.config.json
+++ b/configs/gs201.radioactive-aospclang-r498229b.config.json
@@ -29,7 +29,8 @@
             "LLVM": "1",
             "LLVM_IAS": "1",
             "LTO": "thin",
-            "externalCommands": { 
+            "externalCommands": {
+              "CROSS_COMPILE": "aarch64-linux-android-",
               "HOSTCC": "clang/bin/clang",
               "HOSTCXX": "clang/bin/clang++",
               "HOSTLD": "clang/bin/ld.lld",
@@ -41,7 +42,6 @@
               "OBJDUMP": "clang/bin/llvm-objdump",
               "STRIP": "clang/bin/llvm-strip",
               "LD": "clang/bin/ld.lld",
-              "LD_LIBRARY_PATH": "clang/lib",
               "READELF": "clang/bin/llvm-readelf",
               "OBJSIZE": "clang/bin/llvm-size"
             } 
