--- a/configs/gs201.radioactive-aospclang-r498229b.config.json
+++ b/configs/gs201.radioactive-aospclang-r498229b.config.json
@@ -24,12 +24,9 @@
           "params": { 
             "ARCH": "arm64",
             "CC": "clang/bin/clang",
-            "CXX": "clang/bin/clang++",
-            "CLANG_TRIPLE": "aarch64-linux-gnu-",
-            "LLVM": "1",
-            "LLVM_IAS": "1",
-            "LTO": "thin",
             "externalCommands": {
+              "CXX": "clang/bin/clang++",
+              "CLANG_TRIPLE": "aarch64-linux-gnu-",
               "CROSS_COMPILE": "aarch64-linux-android-",
               "HOSTCC": "clang/bin/clang",
               "HOSTCXX": "clang/bin/clang++",
@@ -43,7 +40,10 @@
               "STRIP": "clang/bin/llvm-strip",
               "LD": "clang/bin/ld.lld",
               "READELF": "clang/bin/llvm-readelf",
-              "OBJSIZE": "clang/bin/llvm-size"
+              "OBJSIZE": "clang/bin/llvm-size",
+              "LLVM": "1",
+              "LLVM_IAS": "1",
+              "LTO": "thin"
             } 
           }, 
           "AnyKernel3": { 
