--- a/configs/gs201.radioactive-aospclang-r498229b.config.json
+++ b/configs/gs201.radioactive-aospclang-r498229b.config.json
@@ -23,6 +23,7 @@
           "enableCcache": false, 
           "params": { 
             "ARCH": "arm64",
+            "SUBARCH": "arm64",
             "CC": "clang/bin/clang",
             "externalCommands": {
               "CXX": "clang/bin/clang++",
