--- a/configs/gs201.zeus-zyc-clang17.config.json
+++ b/configs/gs201.zeus-zyc-clang17.config.json
@@ -1,18 +1,18 @@
 [
     {
         "kernelSource": { 
-            "name": "gs201-zyc-v18", 
+            "name": "gs201-ZYC-v17", 
             "repo": "https://github.com/EduardoA3677/RadioactiveKernel_Pantah.git", 
             "branch": "a15-susfsnext", 
             "device": "gs201",
-            "clangname": "ZyC-V18",
-            "kernelname": "Radioactive",
+            "clangname": "ZyC-V17",
+            "kernelname": "Zeus",
             "androidversion": "A15",
-            "defconfig": "radioactive_defconfig" 
+            "defconfig": "zeus_defconfig" 
           }, 
           "toolchains": [ 
             {  
-               "url": "https://github.com/ZyCromerZ/Clang/releases/download/18.0.0git-20240124-release/Clang-18.0.0git-20240124.tar.gz",  
+               "url": "https://github.com/ZyCromerZ/Clang/releases/download/17.0.0-20230725-release/Clang-17.0.0-20230725.tar.gz",  
                "name": "clang",  
                "binaryEnv": [
                 "bin"
